# solana-stablecoin-standard

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  SUBMISSION.md  docker-compose.yml  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: anchor-engineer.md  solana-qa-engineer.md
.claude/commands/: build-program.md  test-and-fix.md
.claude/rules/: anchor.md  typescript.md
.github/workflows/: ci.yml  test.yml
assets/: architecture.mmd
backend/: Dockerfile  package.json  tsconfig.json
backend/src/: index.ts
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  CONSTANTS.md  DEPLOYMENT.md  ERRORS.md  EVENTS.md  OPERATIONS.md  ORACLE.md  PRIVACY.md  README.md  REGULATORY.md  SDK.md  SECURITY-AUDIT.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  TESTING.md
examples/: basic-usage.ts  compliance-operations.ts  create-stablecoin.ts  custom.json  custom.toml  mint-and-burn.ts  sss-1.json  sss-2.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_attestation_math.rs  fuzz_ix_data.rs  fuzz_mint_arithmetic.rs  fuzz_state_machine.rs  fuzz_validation.rs
programs/: sss-token-keypair.json  sss-transfer-hook-keypair.json
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/sss-token/src/instructions/: accept_authority.rs  add_to_blacklist.rs  attest_reserves.rs  burn.rs  cancel_authority_transfer.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter_quota.rs  update_roles.rs  update_treasury.rs
programs/sss-token/src/state/: attestation.rs  config.rs  mod.rs  registry.rs  roles.rs
programs/sss-token/src/utils/: mod.rs  pda.rs  token.rs  validation.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sss-transfer-hook/src/instructions/: add_to_blacklist.rs  execute.rs  initialize_extra_account_metas.rs  mod.rs  remove_from_blacklist.rs  update_extra_account_metas.rs
scripts/: deploy-devnet.sh  devnet-proof.ts
sdk/cli/: package.json  (+1 more)
tests/: admin-extended.ts  admin-roles.ts  authority-pause-extended.ts  authority-pause.ts  compliance-extended.ts  compliance-flows.ts  e2e-sss1.ts  e2e-sss2.ts  edge-cases.ts  full-lifecycle.ts  invariants.ts  multi-user.ts  registry.ts  reserve-attestation.ts  role-matrix.ts  sdk-integration.ts  sss-token.ts  sss-transfer-hook.ts  token-ops-edge.ts  token-ops-extended.ts
trident-tests/: Cargo.toml  FUZZ_ISSUES.md  Trident.toml
(+84 files in other folders)
