[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Solana Stablecoin Standard — Transfer Hook Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "7", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8"
spl-discriminator = "0.3"
spl-tlv-account-resolution = "0.8"
spl-pod = "0.4"
spl-type-length-value = "0.6"
solana-security-txt = "1.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
